# public-transport-mcp-poc

./: .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
beam-pipelines/: transport_pipeline.py
beam-pipelines/beam-pipelines/: pyvenv.cfg
init-scripts/: 01-init-postgis.sql
public-transport-mcp/: makefile  pyproject.toml
public-transport-mcp/src/: server.py
public-transport-mcp/src/db/geolocation/: postgis_client.py
public-transport-mcp/src/db/graph/: graph_client.py
public-transport-mcp/src/maps/: maps_client.py
public-transport-mcp/src/mcp_server/: address_geoconverter.py
